updated image sizes

--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -65,7 +65,7 @@
 
 <!--profile text-->
 <div  class = "main-text">
-    <img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge">
+    <img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge" style="width:225px;height:250px;">
     <body class = "main-text">
         <h2>Adam Puckeridge</h2>
         <h4>Student No: S3964092</h4>
