--- a/Helen_Andrews.html
+++ b/Helen_Andrews.html
@@ -65,7 +65,7 @@
 </head>
 <!--group text-->
 <div  class = "main-text">
-    <img src="images/Helenandrews.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Helen Andrews">
+    <img src="images/Helenandrews.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Helen Andrews"  style="width:240px;height:250px;">
     <body class = "main-text">
             
             <h2>Helen Andrews</h2>
