--- a/Joshua_McCorkell.html
+++ b/Joshua_McCorkell.html
@@ -65,7 +65,7 @@
 </head>
 <!--group text-->
 <div  class = "main-text">
-    <img src="images/joshuamccorkell.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Joshua McCorkell">
+    <img src="images/joshuamccorkell.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Joshua McCorkell"  style="width:225px;height:250px;">
     <body class = "main-text">
         <h2>Joshua M<sup>c</sup>Corkell</h2>
         <h4>Student No: S3960141</h4>
