--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -66,7 +66,7 @@
 <!--group text-->
 
 <div  class = "main-text">
-    <img src="images/bad_landing.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing">
+    <img src="images/bad_landing.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing"  style="width:320px;height:250px;">
     <body class = "main-text">
             
             <h2>Robert Longmore</h2>
