--- a/IT_tech_cybersecurity.html
+++ b/IT_tech_cybersecurity.html
@@ -83,12 +83,18 @@
     <div class = "main-text">
 
         <p><b>What does it do?</b></p>
+
+        <figure class = "figure-style">
+        <img src="images/cybersecuritykeyboard.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Helen Andrews"  style="width:250px;height:300x;">
+        <figcaption>Licenced under CC BY 2.0<a href = "https://www.flickr.com/photos/defenceimages/10086117975/in/photolist-gngZtM-25Sn5d6-25Sn4Ec-25Sn4KT-8dyPfo-2nt9dtp-2kSS1nu-25Sn5tM-27fsAgi-24uh8Zj-ro5xU1-27fsvEp-27bnWJC-24uh94s-robQH8-rEx1HA-rmjqPR-ro5DDC-robWeD-robQLe-ro4o1J-qHD6b3-robWgc-rCmnJw-25SiHgx-rECVo8-rmjjTT-qHDbVQ-K7fgtW-27fsyk4-HzQ2J6-27fsBan-25Sn4We-rmjjZ4-24uh997-HzQ46e-25SSH5p-269Lkh1-K7fuB9-robQHt-qi9WAf-qHDbVE-qHRpjT-2b9KhiW-27eY9mt-K76AuE-27eY9uV-q2ocGj-25Sn4Qn-24uMMVS">Secure keyboard image</a></figcaption>
+        </figure>
+
         <p>Cyber Security is, simply put, one of the most important parts of the modern world. At a basic level,
             cyber security is preventing unauthorized operations from happening on computer and information systems,
             and in particular, to protect the information and data stored on those systems. Despite seeming so simple,
             cyber security is one of the most complex and essential parts of the IT industry.
              </p>
-
+         
         <p>At the heart of cyber and information security is a concept known as the ‘CIA triad’. CIA stands for Confidentiality, Integrity, and Availability.
             Confidentiality means that only people who are authorized should be able to access data. Integrity means that when someone accesses data, the data should be intact,
             transparent, and untampered with. Availability means that if someone is authorized to access data,
