added industry data reference dropdown link

--- a/IT_tech_cybersecurity.html
+++ b/IT_tech_cybersecurity.html
@@ -53,7 +53,7 @@
         <div class = "dropdown-content">
             <a href = "IT_tech_cybersecurity_references.html">Cyber Security</a>
             <a href = "IT_tech_machinelearning_references.html">Machine Learning</a>
-           
+            <a href = "Industry_data_references.html">Industry Data</a>
         </div> 
     </div>
 
