Industry data references page updated.

--- a/Industry_data_references.html
+++ b/Industry_data_references.html
@@ -71,25 +71,19 @@
 
 
     <div class = "main-text">
-        <h2>Cyber Security References</h2>
-    <h3>Prepared by: Joshua M<sup>c</sup>Corkell</h3><hr>
+        <h2>Industry Data References</h2>
+    <h3>Prepared by: Helen Andrews</h3><hr>
     
     </div>
 
 
 
-
+<!-- referecnes links-->
 <body class = "main-text">
     <div class = "main-text">
 
-        <p><a href = "https://www.wired.com/story/google-free-security-keys-campaigns/">https://www.wired.com/story/google-free-security-keys-campaigns/</a></p>
-        <p><a href = "https://www.youtube.com/watch?v=hGRii5f_uSc">https://www.youtube.com/watch?v=hGRii5f_uSc</a></p>
-        <p><a href = "https://www.gartner.com/en/newsroom/press-releases/2021-05-17-gartner-forecasts-worldwide-security-and-risk-managem">https://www.gartner.com/en/newsroom/press-releases/2021-05-17-gartner-forecasts-worldwide-security-and-risk-managem </a></p>
-        <p><a href = "https://www.csoonline.com/article/3645091/cybersecurity-spending-trends-for-2022-investing-in-the-future.html" >https://www.csoonline.com/article/3645091/cybersecurity-spending-trends-for-2022-investing-in-the-future.html</p>
-        <p><a href = "https://www.zdnet.com/article/australian-tech-unicorn-canva-suffers-security-breach/">https://www.zdnet.com/article/australian-tech-unicorn-canva-suffers-security-breach/</a></p>
-        <p><a href = "https://cybersecurityventures.com/cybercrime-damages-6-trillion-by-2021/">https://cybersecurityventures.com/cybercrime-damages-6-trillion-by-2021/ </a></p>
-        <p><a href = "https://theconversation.com/did-the-census-really-suffer-a-denial-of-service-attack-63755">https://theconversation.com/did-the-census-really-suffer-a-denial-of-service-attack-63755 </a></p>
-        <p><a href = "https://cpl.thalesgroup.com/sites/default/files/content/research_reports_white_papers/field_document/2022-05/2022-thales-data-threat-report-emea-edition.pdf">https://cpl.thalesgroup.com/sites/default/files/content/research_reports_white_papers/field_document/2022-05/2022-thales-data-threat-report-emea-edition.pdf </a></p>
+        <p><a href = "https://resources.workable.com/full-stack-developer-job-description">https://resources.workable.com/full-stack-developer-job-description </a></p>
+        <p><a href = "https://www.seek.com.au/career-advice/role/sales-and-business-development-manager">https://www.seek.com.au/career-advice/role/sales-and-business-development-manager </a> </a></p>
 
     </div>
 </body>
