begun Ideal Jobs page

--- a/IT_tech_cybersecurity.html
+++ b/IT_tech_cybersecurity.html
@@ -72,7 +72,8 @@
 
     <div class = "main-text">
         <h2>Cyber Security</h2>
-    <h3>Prepared by: Joshua M<sup>c</sup>Corkell</h3><hr>
+    <h3>Prepared by: Joshua M<sup>c</sup>Corkell</h3>
+    <!--horizontal line--><hr>
     
     </div>
 
