fixed references dropdown in machine learning and cyber security refences pages

--- a/IT_tech_cybersecurity_references.html
+++ b/IT_tech_cybersecurity_references.html
@@ -51,7 +51,7 @@
             <i class = "arrow-down"></i>
         </button>
         <div class = "dropdown-content">
-            <a href = "IT_tech_cybersecurity_references.html">Cyber Security</a>
+            <a href = "Industry_data_references.html">Industry Data</a>
             <a href = "IT_tech_machinelearning_references.html">Machine Learning</a>
            
         </div> 
