added images to cybersecurity page

--- a/IT_tech_cybersecurity.html
+++ b/IT_tech_cybersecurity.html
@@ -122,6 +122,18 @@
 
         <p>Ideally, systems and devices should use multiple or all these methods of authentication. Bank cards use multiple methods: A physical card (only you own), a PIN number (only you know), and to an extent, they also use a third method: your location. Many banks keep track of the locations your card is used and may contact you if your location changes unexpectedly. Websites often have the option of multi-factor authentication: a password (only you know), and your phone (only you own). Many phones have the option of turning on biometrics such as fingerprint scans and facial recognition, which are things that only you are. These principles of the CIA triad and Authentication form the basis of most of cyber security.</p>
 
+
+        <figure class = "figure-style">
+            <img src="images/cybersecuritybanner.jpg">
+            <figcaption>NoDerivs 2.0 Generic (CC BY-ND 2.0)<a href = "https://www.flickr.com/photos/195818920@N07/52159332917/in/photolist-2nt9dtp-qFPWCh-25Sn5d6-25Sn4Ec-25Sn4KT-8dyPfo-2kSS1nu-25Sn5tM-27fsAgi-24uh8Zj-ro5xU1-27fsvEp-rExv9H-27bnWJC-24uh94s-ro5DzE-2kSUTzp-robQH8-rEx1HA-K7fgtW-27fsyk4-HzQ2J6-rmjqPR-27fsBan-ro5DDC-robWeD-25Sn4We-robQLe-ro4o1J-rmjjZ4-qHD6b3-robWgc-rCmnJw-24uh997-rECVo8-rmjjTT-HzQ46e-qHDbVQ-25SSH5p-269Lkh1-K7fuB9-25SiHgx-robQHt-25Sn4Qn-24uMMVS-27fswWc-qi9WAf-qHDbVE-qHRpjT-269LduU">cyber security banner image</a></figcaption>
+            </figure>
+    
+
+
+
+
+
+
         <p><b>What is the likely impact? </b></p>
 
         <p>The impact of cyber security on the IT industry, and the world at large, has been immense, and will continue to be so. In 2021, cyber security spending worldwide was predicted to exceed $150 billion (Gartner 2021), and with current trends, it is likely that this will continue to increase. A study by CSO (2021) found that over 44% of security leaders expected their security budgets to increase in 2022, and only 2% expected a decrease.</p>
