added image to machine learning page

--- a/IT_tech_machinelearning.html
+++ b/IT_tech_machinelearning.html
@@ -81,6 +81,17 @@
 <body class = "main-text">
     <div class = "main-text">
 <p><b>What does it do?</b></p>
+
+
+<figure class = "figure-style">
+    <img src="images/machinelearningboard.jpg">
+    <figcaption>image by Mike MacKenzie (CC BY 2.0))<a href = "https://www.flickr.com/photos/mikemacmarketing/30212411048/in/photolist-N2LvdL-aXHxG6-2gzmSJF-2gzmmFU-dfjpqV-2aDXanU-28VrEhA-2m1ZUtY-2mihXZU-27pq9bw-2ncoxVm-FFvQ9o-2ix6wfR-2mY4hZf-2n5765L-2mA6UtX-2mXZEpD-2mAPPfc-WMNtZC-9fNSyA-bqy1No-SXc3Pi-dVH9ab-2nbDRSU-RLqBM2-bsm7pY-2nbZBXY-287UFXf-dgLNXi-2natQiM-KJejp6-xXJuwi-qesQoa-2nrywfc-Eanozh-2gXUF6u-2mKT8HW-MZCqiH-2m44LaL-CHJwJL-KSVnz5-2mhYu19-QdCKW6-2nbY4ri-2keuuNe-M198bY-2k5mzns-2jzkWJP-2ntrBv8-2mG7672">Robot Machine Learning</a></figcaption>
+    </figure>
+
+
+
+
+
     <p>Machine learning and AI (Artificial Intelligence) is an area of technology that has experienced exceptionally large amounts of growth in recent years.
      Machine learning can be used for almost any task that involves data processing and data analysis, such as facial recognition, natural language processing,
       and other pattern recognition applications. On a basic level, machine learning is achieved by showing an algorithm large amounts of data, which is used to
