updates images Machine learning page.

--- a/IT_tech_machinelearning.html
+++ b/IT_tech_machinelearning.html
@@ -89,9 +89,6 @@
     </figure>
 
 
-
-
-
     <p>Machine learning and AI (Artificial Intelligence) is an area of technology that has experienced exceptionally large amounts of growth in recent years.
      Machine learning can be used for almost any task that involves data processing and data analysis, such as facial recognition, natural language processing,
       and other pattern recognition applications. On a basic level, machine learning is achieved by showing an algorithm large amounts of data, which is used to
@@ -130,6 +127,23 @@
      research is currently being undertaken to find ways of doing these types of operations faster and more efficiently (Muller 2022, Mythic 2022).</p>
 
     <p><b>What is the likely impact?</b></p> 
+
+
+    <figure class = "figure-style">
+        <img src="images/AIart.jpg">
+        <figcaption>Image by Steve Jurvetson (CC BY 2.0))<a href = "https://www.flickr.com/photos/jurvetson/51768392370/in/photolist-2mSAxt9-2mHKtJg-2kYme6n-2mVLU2i-KSVnz5-2iw6Z2Y-8gQU1J-2nvh3Rs-2nvh3R2-2nvh3Q5-2nvfNN3-NZ9rYe-XiWhoY-owp36o-ouQke6-oeVGFC-ouicd4-of12fT-2nvfMC5-2nvigvj-2nvaxao-2nvigus-2nvfNL4-2nvh3M9-XhnwK5-2iw6Ywp-YpGjyt-2m1BWk9-2m1Atjb-2kYfDru-2m1wtMW-2mW8MSF-N8E6Xk-2nvigsU-2nvh3LH-2nvfMyT-2nvh3Kv-2nvax6L-2nvigr1-2nvfNHi-2nvfMw8-2nvax5P-2nvh3H1-2nvigph-2nvax4b-2nvh32w-YiJX4K-2jEQ6ka-2jG9PmX-XYKtdW">AI drawn art</a></figcaption>
+        </figure>
+
+
+
+
+
+
+
+
+
+
+
     <p>Developments in machine learning and AI have had impacts in many areas. As mentioned above, things like Chess, Go, and even many video games, 
      have been revolutionized by the advent of AI opponents that can beat even the best players.
      Other fields like writing and video/photo editing are currently in the process of changing because of the invention of powerful machine learning tools like GPT-3 and Dalle-E 2. 
