--- a/Industry_data.html
+++ b/Industry_data.html
@@ -81,7 +81,46 @@
 <body class = "main-text">
     <div class = "main-text">
 <p><b>Ideal Jobs</b></p>
+
+<p>Before publishing this report, our group was tasked with finding our individual ideal roles in the job market on websites such as Seek[1]. </p>
+
+<ul>
+    <li><b>Adam Puckeridge: Full Stack Developer (Web Developer/Engineer) </b></li>
+    <li><b>Aiden Howlett: Junior Software Engineer </b></li>
+    <li><b>Helen Andrews: Software Developer </b></li>
+    <li><b>Joshua McCorkell: Web Developer </b></li>
+    <li><b>Robert Longmore: Aviation Business Development Manager </b></li>
+    <li><b>Sean De Chavez: Developer Programmer (Games) </b></li>
+</ul>
   
+<p><b>Employer demand </b></p>
+<p>The career paths which the group have chosen are all in demand positions, as per data sourced from Burning Glass Technologies. This has allowed us to collate and analyse the demand for these positions from employers. </p>
+
+<ul>
+    <li>Aiden/Helen: Software Developer/Engineer - 29456 job opportunities - strong demand  </li>
+    <li>Adam/Joshua: Web Developer - 5990 job opportunities - strong demand </li>
+    <li>Sean: Developer/Programmer - 4436 job opportunities - strong demand </li>
+    <li>Robert: Business Development Manager - 4141 job opportunities - strong demand </li>
+    
+</ul>
+
+<p><b>Skills set required </b></p>
+<p>General skills that are consistent across the career paths include: </p>
+
+<ul>
+    <li>soft skills</li>
+    <li>Teamwork</li>
+    <li>Project Management</li>
+    <li>Relationship Management</li>
+    <li>Troubleshooting</li>
+    
+</ul>
+
+
+
+
+
+
      </div>
     </body>
     <!--footer-->
