--- a/Industry_data.html
+++ b/Industry_data.html
@@ -100,8 +100,7 @@
     <li>Aiden/Helen: Software Developer/Engineer - 29456 job opportunities - strong demand  </li>
     <li>Adam/Joshua: Web Developer - 5990 job opportunities - strong demand </li>
     <li>Sean: Developer/Programmer - 4436 job opportunities - strong demand </li>
-    <li>Robert: Business Development Manager - 4141 job opportunities - strong demand </li>
-    
+    <li>Robert: Business Development Manager - 4141 job opportunities - strong demand </li>  
 </ul>
 
 <p><b>Skills set required </b></p>
@@ -112,8 +111,7 @@
     <li>Teamwork</li>
     <li>Project Management</li>
     <li>Relationship Management</li>
-    <li>Troubleshooting</li>
-    
+    <li>Troubleshooting</li   
 </ul>
 
 
