--- a/Industry_data.html
+++ b/Industry_data.html
@@ -111,7 +111,7 @@
     <li>Teamwork</li>
     <li>Project Management</li>
     <li>Relationship Management</li>
-    <li>Troubleshooting</li   
+    <li>Troubleshooting</li>  
 </ul>
 
 
