added IT specific skill set

--- a/Industry_data.html
+++ b/Industry_data.html
@@ -109,9 +109,21 @@
 <ul>
     <li>soft skills</li>
     <li>Teamwork</li>
-    <li>Project Management</li>
-    <li>Relationship Management</li>
+    <li>Project management</li>
+    <li>Relationship management</li>
     <li>Troubleshooting</li>  
+</ul>
+<p>IT- specific skills that are consistent across the career paths include: </p>
+
+<ul>
+    <li>Systems and networks</li>
+    <li>Cloud computing</li>
+    <li>Multiple back-end languages (python, Java, C#)</li>
+    <li>Multiple front-end languages (HTML/CSS, Javascript, XML)</li>
+    <li>Machine learning</li>  
+    <li>Security</li>
+    <li>DevOps</li>
+    <li>Data analysis</li>
 </ul>
 
 
