project idea, requires referencing
referencing to be sorted

--- a/Project_idea.html
+++ b/Project_idea.html
@@ -68,7 +68,7 @@
     <div class = "main-text">
         <h2>Project Idea</h2>
     
-    <h3>All of us</h3><hr>
+    <h3>everyone</h3><hr>
     
     </div>
 
