fixed heading error in project idea

--- a/Project_idea.html
+++ b/Project_idea.html
@@ -67,7 +67,7 @@
 <!-- page heading-->
     <div class = "main-text">
 
-      h2>Project Idea</h2>
+      <h2>Project Idea</h2>
     
     <h3>everyone</h3>
     <hr>
