--- a/Industry_data_references.html
+++ b/Industry_data_references.html
@@ -53,6 +53,7 @@
         <div class = "dropdown-content">
             <a href = "IT_tech_cybersecurity_references.html">Cyber Security</a>
             <a href = "IT_tech_machinelearning_references.html">Machine Learning</a>
+            <a href = "Project_idea_references.html">Project Idea</a>
            
         </div> 
     </div>
