--- a/Sean_De_Chavez.html
+++ b/Sean_De_Chavez.html
@@ -54,6 +54,7 @@
             <a href = "IT_tech_cybersecurity_references.html">Cyber Security</a>
             <a href = "IT_tech_machinelearning_references.html">Machine Learning</a>
             <a href = "Industry_data_references.html">Industry Data</a>
+            <a href = "Project_idea_references.html">Project Idea</a>
            
         </div> 
     </div>
