adding refrences to project ideas reference page

--- a/Project_idea_references.html
+++ b/Project_idea_references.html
@@ -77,7 +77,11 @@
 <!--main text-->
 <body class = "main-text">
     <div class = "main-text">
-<p><b>Overview</b></p>
+
+<p>Crozier, R., 2022. ANZ Plus has a 'halo effect' on the bank. [online] iTnews. Available at: <a href = "https://www.itnews.com.au/news/anz-plus-has-a-halo-effect-on-the-bank-580626">https://www.itnews.com.au/news/anz-plus-has-a-halo-effect-on-the-bank-580626</a> Accessed 19 June 2022. </p>
+
+<p>Crozier, R., 2021. ANZ Banking Group tackles risk reporting 'rethink' on Google cloud. [online] iTnews. Available at: <a href = "https://www.itnews.com.au/news/anz-banking-group-tackles-risk-reporting-rethink-on-google-cloud-571192">https://www.itnews.com.au/news/anz-banking-group-tackles-risk-reporting-rethink-on-google-cloud-571192</a> Accessed 19 June 2022</p>
+
 
 
 
