working through references

--- a/Project_idea_references.html
+++ b/Project_idea_references.html
@@ -69,7 +69,7 @@
 
       <h2>Project Idea</h2>
     
-    <h3>everyone</h3>
+    <h3>Aiden Howlett</h3>
     <hr>
     
     </div>
@@ -78,9 +78,25 @@
 <body class = "main-text">
     <div class = "main-text">
 
-<p>Crozier, R., 2022. ANZ Plus has a 'halo effect' on the bank. [online] iTnews. Available at: <a href = "https://www.itnews.com.au/news/anz-plus-has-a-halo-effect-on-the-bank-580626">https://www.itnews.com.au/news/anz-plus-has-a-halo-effect-on-the-bank-580626</a> Accessed 19 June 2022. </p>
+<p>Crozier, R., 2022. ANZ Plus has a 'halo effect' on the bank. [online] iTnews. Available at: <a href = "https://www.itnews.com.au/news/anz-plus-has-a-halo-effect-on-the-bank-580626">https://www.itnews.com.au/news/anz-plus-has-a-halo-effect-on-the-bank-580626</a> [Accessed 19 June 2022]. </p>
 
-<p>Crozier, R., 2021. ANZ Banking Group tackles risk reporting 'rethink' on Google cloud. [online] iTnews. Available at: <a href = "https://www.itnews.com.au/news/anz-banking-group-tackles-risk-reporting-rethink-on-google-cloud-571192">https://www.itnews.com.au/news/anz-banking-group-tackles-risk-reporting-rethink-on-google-cloud-571192</a> Accessed 19 June 2022</p>
+<p>Crozier, R., 2021. ANZ Banking Group tackles risk reporting 'rethink' on Google cloud. [online] iTnews. Available at: <a href = "https://www.itnews.com.au/news/anz-banking-group-tackles-risk-reporting-rethink-on-google-cloud-571192">https://www.itnews.com.au/news/anz-banking-group-tackles-risk-reporting-rethink-on-google-cloud-571192</a> [Accessed 19 June 2022]</p>
+
+<p>ANZ. 2022. ANZ Plus, A New Way To Bank. [online] Available at: <a href = "https://www.anz.com.au/plus/">https://www.anz.com.au/plus/</a> [Accessed 19 June 2022]</p>
+
+<p>Kurian, T., 2019. ANZ accelerates its digital transformation with Google Cloud smart analytics. [online] Google Cloud Blog. Available at: <a href = "https://cloud.google.com/blog/topics/customers/anz-accelerates-its-digital-transformation-with-google-cloud-smart-analytics">https://cloud.google.com/blog/topics/customers/anz-accelerates-its-digital-transformation-with-google-cloud-smart-analytics</a> [Accessed 19 June 2022]. </p>
+
+<p>Google Cloud. n.d. Up Case Study. [online] Available at: <a href = "https://cloud.google.com/customers/up">https://cloud.google.com/customers/up</a> [Accessed 19 June 2022]. </p>
+
+<p>Rowland, C., 2018. Digital bank Up launches with Google Pay, fee-free banking and Android app. [online] Ausdroid. Available at: <a href = "https://ausdroid.net/2018/10/31/digital-bank-launches-google-pay-fee-free-banking-android-app/">https://ausdroid.net/2018/10/31/digital-bank-launches-google-pay-fee-free-banking-android-app/</a> [Accessed 19 June 2022]. </p>
+
+<p>McCormick, E., 2021. BofA CEO on future of banking: 'We're clearly a technology company'. [online] Yahoo Finance. Available at: <a href = "https://finance.yahoo.com/news/bof-a-ceo-on-future-of-banking-were-clearly-a-technology-company-144208908.html">https://finance.yahoo.com/news/bof-a-ceo-on-future-of-banking-were-clearly-a-technology-company-144208908.html</a>[Accessed 19 June 2022].  </p>
+
+<p>de Kretser, A., 2022. ANZ gets more tech on board to help transform retail banking. [online] Australian Financial Review. Available at: <a href = "https://www.afr.com/companies/financial-services/anz-gets-more-tech-on-board-20220523-p5anp"2>https://www.afr.com/companies/financial-services/anz-gets-more-tech-on-board-20220523-p5anp</a> [Accessed 19 June 2022]. </p>
+
+<p>Google Maps Help. 2022. Get directions & show routes. [online] Available at: <a href = "https://support.google.com/maps/answer/144339?hl=en&co=GENIE.Platform%3DDesktop">https://support.google.com/maps/answer/144339?hl=en&co=GENIE.Platform%3DDesktop</a> [Accessed 19 June 2022]. </p>
+
+
 
 
 
