references for project ideas complete,  needs confirmation on order

--- a/Project_idea_references.html
+++ b/Project_idea_references.html
@@ -96,6 +96,15 @@
 
 <p>Google Maps Help. 2022. Get directions & show routes. [online] Available at: <a href = "https://support.google.com/maps/answer/144339?hl=en&co=GENIE.Platform%3DDesktop">https://support.google.com/maps/answer/144339?hl=en&co=GENIE.Platform%3DDesktop</a> [Accessed 19 June 2022]. </p>
 
+<p>Google Maps Help. 2022. Use layers to find places, traffic, terrain, biking & transit. [online] Available at: <a href = "https://support.google.com/maps/answer/3092439?hl=en&co=GENIE.Platform%3DiOS">https://support.google.com/maps/answer/3092439?hl=en&co=GENIE.Platform%3DiOS</a> [Accessed 19 June 2022]. </p>
+
+<p>PlugShare. 2022. PlugShare - EV Charging Station Map - Find a place to charge. [online] Available at: <a href = "https://www.plugshare.com/"">https://www.plugshare.com/</a> [Accessed 19 June 2022]. </p>
+
+<p>Service NSW. 2022. Live Traffic NSW. [online] Available at: <a href = "https://www.service.nsw.gov.au/transaction/live-traffic-nsw"> https://www.service.nsw.gov.au/transaction/live-traffic-nsw</a>[Accessed 19 June 2022]. </p>
+
+
+
+
 
 
 
