fixed menu bar typo

--- a/IT_Technologies.html
+++ b/IT_Technologies.html
@@ -43,7 +43,7 @@
            
         </div> 
     </div>
-    <a href="Project_ideas.html">Project Ideas</a>
+    <a href="Project_ideas.html">Project Idea</a>
     <a href="References.html">References</a>
     <a href="Feedback.html">Feedback</a>
     <a href="Group_reflection.html">Group Reflection</a></h2>
