--- a/Industry_data.html
+++ b/Industry_data.html
@@ -45,7 +45,7 @@
         </div> 
     </div>
 
-    <a href="Project_idea.html">Project Ideas</a>
+    <a href="Project_idea.html">Project Idea</a>
     <div class = "dropdown">
         <button class = "dropbtn">References&nbsp&nbsp&nbsp&nbsp&nbsp
             
