started populating Ideal Jobs page

--- a/Ideal_jobs.html
+++ b/Ideal_jobs.html
@@ -75,7 +75,7 @@
 
 <!-- page heading-->
     <div class = "main-text">
-        <h2>Industry Data</h2>
+        <h2>Ideal Jobs</h2>
     <h3>Helen Andrews</h3><hr>
     
     </div>
@@ -84,50 +84,39 @@
 <body class = "main-text">
     <div class = "main-text">
 <p><b>Ideal Jobs</b></p>
+<p>In general, our ideal jobs are all remarkably similar with the exception of Robert. Most of us are looking at going in the direction of being a Software Developer/Engineer. Robert’s ideal job is as a Business Developer. </p>
 
-<p>Before publishing this report, our group was tasked with finding our individual ideal roles in the job market on websites such as Seek[1]. </p>
+<p><b>What common elements are there, if any?  </b></p>
+<p>The most common element across all our group's ideal jobs is that almost every job has teamwork, problem solving and written and verbal communication skills as a requirement. As most of us are looking at going in the Software Developer/Engineer direction, these jobs all have a deep understanding of writing code as a similarity. </p>
 
-<ul>
-    <li><b>Adam Puckeridge: Full Stack Developer (Web Developer/Engineer) </b></li>
-    <li><b>Aiden Howlett: Junior Software Engineer </b></li>
-    <li><b>Helen Andrews: Software Developer </b></li>
-    <li><b>Joshua McCorkell: Web Developer </b></li>
-    <li><b>Robert Longmore: Aviation Business Development Manager </b></li>
-    <li><b>Sean De Chavez: Developer Programmer (Games) </b></li>
-</ul>
-  
-<p><b>Employer demand </b></p>
-<p>The career paths which the group have chosen are all in demand positions, as per data sourced from Burning Glass Technologies. This has allowed us to collate and analyse the demand for these positions from employers. </p>
+<p><b>What differentiates each position from the others, if anything? </b></p>
+<p>Robert’s ideal job is the only one that is really different as it is a business development job and is not directly related to IT. It has some elements of IT as it is a job that requires technical knowledge of the products that the company makes. The job also requires basic computer skills such as familiarity with Microsoft office.  </p>
+<p>As for the rest of the group, each job has their own specific set of coding/platform skills depending on what type of systems they are using. </p>
 
-<ul>
-    <li>Aiden/Helen: Software Developer/Engineer - 29456 job opportunities - strong demand  </li>
-    <li>Adam/Joshua: Web Developer - 5990 job opportunities - strong demand </li>
-    <li>Sean: Developer/Programmer - 4436 job opportunities - strong demand </li>
-    <li>Robert: Business Development Manager - 4141 job opportunities - strong demand </li>  
-</ul>
+<p><b>How similar or different are your career plans across the group? </b></p>
+<p>Most of us have very similar career plans as we are all interested in a job that heavily involves coding, whether that is building websites, games or creating apps. </p>
+<p>Robert is the only one in the group whose job is different as his is a business development role. This role entails finding new customers and identifying ways to grow the business rather than being directly involved in the IT side of the business. </p>
 
-<p><b>Skills set required </b></p>
-<p>General skills that are consistent across the career paths include: </p>
 
-<ul>
-    <li>soft skills</li>
-    <li>Teamwork</li>
-    <li>Project management</li>
-    <li>Relationship management</li>
-    <li>Troubleshooting</li>  
-</ul>
-<p>IT- specific skills that are consistent across the career paths include: </p>
 
-<ul>
-    <li>Systems and networks</li>
-    <li>Cloud computing</li>
-    <li>Multiple back-end languages (python, Java, C#)</li>
-    <li>Multiple front-end languages (HTML/CSS, Javascript, XML)</li>
-    <li>Machine learning</li>  
-    <li>Security</li>
-    <li>DevOps</li>
-    <li>Data analysis</li>
-</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <hr>
     </div>
