updated ideal job, helen

--- a/Ideal_jobs.html
+++ b/Ideal_jobs.html
@@ -96,6 +96,28 @@
 <p><b>How similar or different are your career plans across the group? </b></p>
 <p>Most of us have very similar career plans as we are all interested in a job that heavily involves coding, whether that is building websites, games or creating apps. </p>
 <p>Robert is the only one in the group whose job is different as his is a business development role. This role entails finding new customers and identifying ways to grow the business rather than being directly involved in the IT side of the business. </p>
+<hr>
+
+
+
+<!-- people parts-->
+<h3>Helen </h3>
+<p><b>Junior Software Developer </b></p>
+<p>As a Junior Software Developer in our company, you will help with development work on our primary product. Our goal for this position is to build both our product and your development skills. You will receive training and help develop and support our web-based solutions as part of our enthusiastic dev team </p>
+
+<p><b>Skills Required </b></p>
+<ul>
+    <li>Problem solving </li>
+    <li>Strong coding skills </li>
+    <li>Written and Verbal Communication</li>
+    <li>Work well in a team </li>
+    <li>Experience with github </li>
+    <li>Scripting skills in bash and/or Python </li>
+    <li>PHP coding </li>
+    <li>Docker </li>
+</ul>
+
+
 
 
 
