added image, ideal job, helen

--- a/Ideal_jobs.html
+++ b/Ideal_jobs.html
@@ -102,6 +102,7 @@
 
 <!-- people parts-->
 <h3>Helen </h3>
+<img src="images/Helenandrews.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Helen Andrews"  style="width:240px;height:250px;">
 <p><b>Junior Software Developer </b></p>
 <p>As a Junior Software Developer in our company, you will help with development work on our primary product. Our goal for this position is to build both our product and your development skills. You will receive training and help develop and support our web-based solutions as part of our enthusiastic dev team </p>
 
