Updated ideal job, Aiden

--- a/Ideal_jobs.html
+++ b/Ideal_jobs.html
@@ -117,6 +117,26 @@
     <li>PHP coding </li>
     <li>Docker </li>
 </ul>
+<hr>
+
+<h3>Aiden </h3>
+<p><b>Junior Software Engineer </b></p>
+<img src="images/aidenhowlett.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Aiden Howlett" style="width:250px;height:250px;">
+<p>Junior software engineers are entry-level members of a software development team. They assist the team with basic tasks under the supervision of their seniors, such as learning base code and writing simple code, and debugging existing software. </p>
+
+<p><b>Skills Required </b></p>
+<ul>
+    <li>Problem solving </li>
+    <li>Working in a team </li>
+    <li>Written and Verbal Communication</li>
+    <li>Golang </li>
+    <li>React </li>
+    <li>Swift </li>
+    <li>Kotlin </li>
+    <li>GCP (Google Cloud Platform) </li>
+</ul>
+<hr>
+
 
 
 
