--- a/Industry_data.html
+++ b/Industry_data.html
@@ -112,7 +112,7 @@
 <p>General skills that are consistent across the career paths include: </p>
 
 <ul>
-    <li>soft skills</li>
+    <li>Soft skills</li>
     <li>Teamwork</li>
     <li>Project management</li>
     <li>Relationship management</li>
