--- a/Ideal_jobs.html
+++ b/Ideal_jobs.html
@@ -138,7 +138,37 @@
 <hr>
 
 
+<h3>Sean</h3>
+<p><b>Video Game Programmer  </b></p>
+<img src="images/seanDechavez.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Sean De Chavez"  style="width:200px;height:250px;">
+<p>A Game Developer is a Software Developer who specialises in creating computer or video games. Game Developers may focus on one or more platforms (such as PlayStation, Xbox, Nintendo or PC), or specialise in mobile or handheld game development. They may specialise further in a particular aspect of game development, such as programming the game’s Artificial Intelligence or virtual landscapes. </p>
 
+<p><b>Skills Required </b></p>
+<ul>
+    <li>Coding in C, C++ and C# </li>
+    <li>Working in a team </li>
+    <li>Great verbal, written and interpersonal skills </li>
+    <li>Excellent time management  </li>
+    <li>Able to familiarise quickly with codebases </li>
+    <li>Problem Solving </li>
+    </ul>
+<hr>
+
+<h3>Robert</h3>
+<p><b>Aviation Business Development Manager  </b></p>
+<img src="images/roblongmore.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing"  style="width:250px;height:250px;">
+<p>A Game Developer is a Software Developer who specialises in creating computer or video games. Game Developers may focus on one or more platforms (such as PlayStation, Xbox, Nintendo or PC), or specialise in mobile or handheld game development. They may specialise further in a particular aspect of game development, such as programming the game’s Artificial Intelligence or virtual landscapes. </p>
+
+<p><b>Skills Required </b></p>
+<ul>
+    <li>Coding in C, C++ and C# </li>
+    <li>Working in a team </li>
+    <li>Great verbal, written and interpersonal skills </li>
+    <li>Excellent time management  </li>
+    <li>Able to familiarise quickly with codebases </li>
+    <li>Problem Solving </li>
+    </ul>
+<hr>
 
 
 
