added robert to ideal jobs

--- a/Ideal_jobs.html
+++ b/Ideal_jobs.html
@@ -157,16 +157,17 @@
 <h3>Robert</h3>
 <p><b>Aviation Business Development Manager  </b></p>
 <img src="images/roblongmore.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing"  style="width:250px;height:250px;">
-<p>A Game Developer is a Software Developer who specialises in creating computer or video games. Game Developers may focus on one or more platforms (such as PlayStation, Xbox, Nintendo or PC), or specialise in mobile or handheld game development. They may specialise further in a particular aspect of game development, such as programming the game’s Artificial Intelligence or virtual landscapes. </p>
+<p>A Business Development Manager is a professional who is responsible for the growth of their department. They work with their sales team to develop mutually beneficial proposals, negotiate contract terms and communicate effectively with stakeholders. A Business Development Manager can also be responsible for identifying and researching new clients and maintaining existing relationships. </p>
 
 <p><b>Skills Required </b></p>
 <ul>
-    <li>Coding in C, C++ and C# </li>
-    <li>Working in a team </li>
-    <li>Great verbal, written and interpersonal skills </li>
-    <li>Excellent time management  </li>
-    <li>Able to familiarise quickly with codebases </li>
-    <li>Problem Solving </li>
+    <li>Communication skills </li>
+    <li>Negotiation skills </li>
+    <li>Project management </li>
+    <li>Analytical and problem-solving skills </li>
+    <li>Time management </li>
+    <li>Experience with Microsoft's range of office apps </li>
+    <li>great verbal, written and interpersonal skills </li>
     </ul>
 <hr>
 
