--- a/Ideal_jobs.html
+++ b/Ideal_jobs.html
@@ -172,6 +172,53 @@
 <hr>
 
 
+<h3>Joshua</h3>
+<p><b>Web Developer </b></p>
+<img src="images/joshuamccorkell.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Joshua McCorkell"  style="width:225px;height:250px;">
+<p>A web developer makes and maintains websites. They are in charge of a site’s overall look and feel. Web developers also handle the technical aspects of a website, including its performance (website speed) and capacity (the maximum amount of traffic the site could handle at a given time). A web developer is usually knowledgeable in both graphic design and programming. </p>
+
+<p><b>Skills Required </b></p>
+<ul>
+    <li>Vue.js </li>
+    <li>Bootstrap </li>
+    <li>Tailwind CSS </li>
+    <li>PHP </li>
+    <li>Node.js </li>
+    <li>PrestaShop </li>
+    <li>Joomla </li>
+    <li>Ubuntu/Linux </li>
+    <li>MySQL and SQ Lite </li>
+    <li>Git</li>
+    <li>Docker, Docker Compose and DevOps </li>
+    <li>Software Architecture </li>
+    <li>Project Management </li>
+    <li>Problem Solving </li>
+    <li>Windows and Windows Server </li>
+    <li>Experience with microsoft's range of office apps. </li>
+    <li>Communication Skills </li>
+    <li>Working in a team </li>
+    </ul>
+<hr>
+
+
+
+<h3>Adam</h3>
+<p><b>Full Stack Web Developer </b></p>
+<img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge" style="width:225px;height:250px;">
+<p>A Full Stack Web Developer is responsible for both the back end and front end of a website or application. This means they can provide end to end service and can be involved in projects that require databases and user interface aspects. They design, develop and maintain a system, website or application. </p>
+
+<p><b>Skills Required </b></p>
+<ul>
+    <li>Experience with Laravel framework, using Laravel to create APIs </li>
+    <li>Experience with commercial experience </li>
+    <li>Experience working with large data sets, and databases </li>
+    <li>Experience with VueJS 2/3, Innertia JS is desirable </li>
+    <li>Tertiary qualifications in relevant field are desirable but not mandatory </li>
+    <li>Flexible attitude and able to work in fast-paced environment </li>
+    <li>Ability to work autonomously as part of a small team</li>
+        </ul>
+<hr>
+
 
 
 
