changed heading banner with graphic version

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel = "stylesheet" href = "stylesheet.css">
 
 <!--top graphic-->
-<head><img src="images/In_Control_Totally_3.png" alt = "In control totally logo" class = "banner-logo"></head>
+<head><img src="images/Banner.png" alt = "In control totally logo" class = "banner-logo"></head>
 
 <body class = "main-text">
 <!--top navigation bar-->
