--- a/Industry_data_references.html
+++ b/Industry_data_references.html
@@ -5,7 +5,7 @@
 <link rel = "stylesheet" href = "stylesheet.css">
 
 <!--top graphic-->
-<head><img src="images/In_Control_Totally_3.png" alt = "In control totally logo" class = "banner-logo">
+<head><img src="images/Banner.png" alt = "In control totally logo" class = "banner-logo"></head>
 
 <!--top navigation bar-->
   
