updated IT work

--- a/IT_work.html
+++ b/IT_work.html
@@ -70,7 +70,7 @@
 <!-- page heading-->
     <div class = "main-text">
         <h2>IT Work</h2>
-    <h3>???</h3><hr>
+    <h3>Sally Interview, the IT professional</h3><hr>
     
     </div>
 
