updated Josh profile page with updated education info

--- a/Joshua_McCorkell.html
+++ b/Joshua_McCorkell.html
@@ -76,7 +76,7 @@
         <h4>Education</h4>
             <ul>
                 <li>Grade 7 day-school, approx. Grade 11/12 Home-schooled.</li>
-                <li>Fundamentals of Mathematics (Murdoch) & Academic and Professional Communications (Curtin)</li>
+                <li>Academic and Professional Communications (Curtin) </li>
             </ul>
         
         
