updated home page index.

--- a/index.html
+++ b/index.html
@@ -65,13 +65,21 @@
     <a href="Group_reflection.html">Group Reflection</a></h2>
 
   </div>
+<div class = "main-text">
 
-  <p> a bit of stuff here</p>
+    <h2>A Group Profile:<h2> 
+        <h2>In Control, Totally </h2>
+  <h3>Prepared by: Adam Puckeridge, Aiden Howlett, Helen Andrews, Joshua McCorkell, Robert Longmore and Sean De Chavez </h3>
+
+
+</div>
   <img src = "images/Cyclopedia_2.png" alt = "Cyclopedia logo" class = "main-text" style = "width:350px;height:300px;">
 
   <div class = "main-text">
 
-    <p>hsgsgdbgdgdhgdbsvsgsghshgdgh</p>
+     <h3><a href = "https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">GitHub Repository</a></h3>
+
+     <h3><a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">GitHub Website</a></h3>
   <hr><!-- horizontal line-->
 
   </div>
