--- a/Industry_data.html
+++ b/Industry_data.html
@@ -28,6 +28,7 @@
         </div> 
     </div>
     <a href="Ideal_jobs.html">Ideal Jobs</a>
+    <a href="Meetings_recordings.html">Meetings and Recordings</a>
     <a href="Industry_data.html">Industry Data</a>
     <a href="IT_work.html">IT Work</a>
     <!--IT technologies dropdown-->
