updated IT work
text formatting

--- a/IT_work.html
+++ b/IT_work.html
@@ -69,9 +69,9 @@
 
 <!-- page heading-->
     <div class = "main-text">
-        <h2>Meetings and recordings</h2>
-    <h3>IT Work, Interview with an IT Professional. </h3><hr>
-    <p>Interview with Sally Longmore, Team Lead of Digital Product, Woolworths.</p>
+        <h2>IT Work</h2>
+    <h3>Interview with an IT Professional. </h3><hr>
+    <p>Sally Longmore, Team Lead of Digital Product, Woolworths.</p>
    
     <iframe width="560" height="315" src="https://www.youtube.com/embed/QluN9GP3hzY" title="YouTube video player" frameborder="0"
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
