--- a/meetings_recordings.html
+++ b/meetings_recordings.html
@@ -70,11 +70,22 @@
 <!-- page heading-->
     <div class = "main-text">
         <h2>Meetings and recordings</h2>
-    <h3>IT Work, Interview with an IT Professional. </h3><hr>
-    <p>Interview with Sally Longmore, Team Lead of Digital Product, Woolworths.</p>
+    <h3>In Control, Totally, work group meeting recordings. </h3><hr>
+    <p>1st meeting. Getting Started</p>
    
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/QluN9GP3hzY" title="YouTube video player" frameborder="0"
-     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/xrP4VXSXDZ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <hr>
+
+<p>2nd meeting. Plan of the Century</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/MCQgio1e_QI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <hr>
+
+    <p>3rd meeting. Working it</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/SZAvGQwqmqc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <hr>
+
+    <p>4th meeting, Progressing well.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/EQqzOfTffT0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
