Updates Aiden profile page,
corrected spelling errors and incorrect student number.

--- a/Aiden_howlett.html
+++ b/Aiden_howlett.html
@@ -71,7 +71,7 @@
     <body class = "main-text">
             
             <h2>Aiden Howlett</h2>
-            <h4>Student No: S3962166</h4>
+            <h4>Student No: S3962116</h4>
             <h4>Nationality: Australian </h4>
             <h4>Languages spoken: English </h4>
             <h4>Education</h4>
@@ -90,7 +90,7 @@
        
 
 <body>
-    <p>Born in Canberra and raised in both Sydney and Canberra, Aiden has always had a passion for technology and media. He’s completed 4 Certificate IV courses at TAFE NSW and worked in a helpdesk position up until recently. Also, he has played the original augmented reality game from Niantic, Ingress, since 2016 and now plays a key part in bringing the game’s community together</p>
+    <p>Born in Canberra and raised in both Sydney and Canberra, Aiden has always had a passion for technology and media. He’s completed 4 Certificate IV courses at TAFE NSW and worked in a helpdesk position up until recently. Also, he has played the original augmented reality game from Niantic, Ingress, since 2016 and now plays a key part in bringing the game’s community together. </p>
 </body>
 <hr>
 </div>
