Updates Josh's page
updates education, corrected email address error.

--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -85,9 +85,7 @@
         
     </body>
 <body>
-    <p>Adam was born in Australia & grew up in the Sutherland Shire in NSW. He moved in 2017 to Blayney in the NSW Central West.
-     Adams first passion is music and playing the guitar and drums, with anything related to technology being a close second.
-      He is currently working full time as a car salesperson with Toyota. I am studying IT as I would like to move into a field that I enjoy.</p>
+    <p>Adam was born in Australia and grew up in the Sutherland Shire, Sydney. In 2017, Adam moved to Blayney in New South Wales’ Central West. Adam’s first passion is music - playing the guitar and drums - with anything related to technology being a close second. Adam currently works full time as a salesperson with Toyota and is studying because they would like to work in a field they enjoy. </p>
     </body>
     <hr>
 </div>
