updates Robs page,
updates education to reflect document

--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -77,7 +77,6 @@
             <h4>Languages spoken: English </h4>
             <h4>Education</h4>
                 <ul>
-                    <li>HSC Gymea Technology High School </li>
                     <li>Aircraft Structures Engineering First Class. (QANTAS AIRWAYS/TAFE) </li>
                     <li>Graduate Certificate in Aviation Management (UNSW) </li>
                     <li>Private Pilot's Licence, Flight Instructor Grade 1 (CASA/RAAus) </li>
@@ -88,7 +87,7 @@
     <h4><a href = "mailto:S3954217@student.rmit.edu.au">Email</a></h4>
     <hr><!--horizontal line-->
        
-    <p>Born in 1974, makes Robert the oldest of the group that is ICT (In Control, Totally). He was in high school to witness the birth of what would become the internet. Although this fostered a lifelong interest in information technologies, Rob has a love for Aviation. He comes to this group with over 30 years’ experience as an Aircraft Structural Engineer, Pilot, and Flying instructor. Although his career has been aviation focussed, he has never lost interest in the IT industry, is an avid gamer, and enjoys keeping up with developments in tech and the IT industry. Although his experience is limited to the user level and experience, he is keen to learn a lot more, and be an active participant in the IT industry. Via Robs studies into IT at RMIT, he hopes to never lose that sense of wonder that the IT industry has provided and will develop into and be an active part in IT’s role in its future</p>
+    <p>Born in 1974, Robert is the oldest in the group. He was in high school to witness the birth of what would become the internet. Although this fostered a lifelong interest in information technologies, Rob has a love for aviation. He comes to this group with over 30 years’ experience as an Aircraft structural Engineer, Pilot, and Flying instructor. Although his career has been aviation focussed, he has never lost interest in the IT industry, and is an avid gamer and enjoys keeping up with developments in tech and the IT industry. Although his experience is limited to the user level and experience, he is keen to learn a lot more, and be an active participant in the IT industry. Via Robs studies into IT at RMIT, he hopes to never lose that sense of wonder that the IT industry has provided and will develop into and be an active part in IT’s role in its future.</p>
     <hr>
 </div>
 
